<resources>
    <string name="app_name">Notification Activity</string>
    <string name="Show_notification">Show Notification</string>
    <string name="channels_name">channels name</string>
    <string name="description_text">description text</string>
    <string name="image_notification">Image notification</string>
    <string name="Send_notification">send notification</string>
    <string name="Notification_Activity">Notification Activity</string>
    <string name="Cancel_notification">Cancel notification</string>
    <string name="large_text_Notification">Large text Notification</string>
    <string name="Auto_Cancel_After_Sometimes">Auto Cancel After Sometimes</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="Click_Notification">Click Notification</string>
    <string name="generate_notification">Generate Notification</string>
</resources>